test/log/arithmetic/vsadd_vv_u32_m.txt
vsadd_vv_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsadd_vv_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsadd_vv_u32_m.c:30:6: warning: no previous prototype for 'vsadd_vv_u32_m_golden' [-Wmissing-prototypes]
   30 | void vsadd_vv_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *b,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vsadd_vv_u32_m.c: In function 'vsadd_vv_u32_m_golden':
vsadd_vv_u32_m.c:32:25: error: 'TODO' undeclared (first use in this function)
   32 |         exp_result[i] = TODO;
      |                         ^~~~
vsadd_vv_u32_m.c:32:25: note: each undeclared identifier is reported only once for each function it appears in
vsadd_vv_u32_m.c:30:38: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vsadd_vv_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *b,uint32_t *exp_result) {
      |                            ~~~~~~~~~~^~~~
vsadd_vv_u32_m.c:30:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vsadd_vv_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *b,uint32_t *exp_result) {
      |                                           ~~~~~~~~~~^~~~~~~
vsadd_vv_u32_m.c:30:71: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vsadd_vv_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *b,uint32_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vsadd_vv_u32_m.c:30:83: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vsadd_vv_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *b,uint32_t *exp_result) {
      |                                                                         ~~~~~~~~~~^
vsadd_vv_u32_m.c: In function 'main':
vsadd_vv_u32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsadd_vv_u32_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsadd_vv_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsadd_vv_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsadd_vv_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsadd_vv_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed